test/coder/error/private-var.pt
using output;

pkg package is 
    var x = 2;
end;

put(x:1);
putln;
